# drf_qalampir_uz

./: .env  Makefile  db.sqlite3  pyproject.toml
apps/: admin.py  models.py  pagination.py  serializers.py  tasks.py  translation.py  url.py  views.py
root/: celery.py  settings.py  urls.py
